Fiz code analysis issues